# domestic-supervisor

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  README.pt.md  flake.nix
assets/: wt_config.xml
include/common/: blueprint.hpp  constants.hpp  device.hpp  event.hpp  icon_button.hpp  mapper.hpp  mqtt.hpp  state.hpp  view.hpp
include/simulator/: domestic_simulator.hpp  image_loop.hpp
include/supervisor/: camera.hpp  camera_panel.hpp  deepnet.hpp  domestic_server.hpp  domestic_supervisor.hpp  dynamic_image.hpp  page_anchor.hpp
nix/: add-windres-flags.sh  windres-wrapper.sh
src/common/: blueprint.cpp  device.cpp  icon_button.cpp  mqtt.cpp  state.cpp
src/simulator/: domestic_simulator.cpp  image_loop.cpp  main.cpp
src/supervisor/: camera.cpp  camera_panel.cpp  deepnet.cpp  domestic_server.cpp  domestic_supervisor.cpp  dynamic_image.cpp  main.cpp  page_anchor.cpp
